--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,16 +1,19 @@
 server {
+    listen 80;
+    error_log /home/box/web/nginx.error_log info;
 
-	listen 80 default;
-
-	location ^~ /uploads/ {
-		root /home/box/web;
-	}
-	location ~* ^.+\.\w+$ {
-		root /home/box/web/public;
-	}
-
-	location / {
-		return 404;
-	}
-
+    location    ^~ /uploads/ {
+        location    ~* \.\w+$ {
+            root    /home/box/web;
+        }
+    }
+    location    ~* \.\w+$ {
+        root   /home/box/web/public;
+    }
+    location    ^~ /hello/ {
+        proxy_pass http://0.0.0.0:8080/;
+    }
+    location    / {
+        proxy_pass http://0.0.0.0:8000/;
+    }
 }
